--- a/SimpleComplexClient/CMakeLists.txt
+++ b/SimpleComplexClient/CMakeLists.txt
@@ -1,7 +1,9 @@
 find_package(SDL2 CONFIG REQUIRED)
 find_package(SDL2_image CONFIG REQUIRED)
-find_package(imgui CONFIG REQUIRED)
+find_package(sdl2-gfx CONFIG REQUIRED)
 find_package(boost_asio CONFIG REQUIRED)
+find_package(box2d CONFIG REQUIRED)
+find_package(imgui CONFIG REQUIRED)
 find_package(boost_thread CONFIG REQUIRED)
 
 file(GLOB_RECURSE SOURCES "src/**/*.cpp")
@@ -11,10 +13,10 @@ add_executable(SimpleComplexClient src/main.cpp ${SOURCES} ${HEADER_LIST})
 
 target_include_directories(SimpleComplexClient PUBLIC include)
 
-target_link_libraries(SimpleComplexClient PRIVATE DeiVoluntas SimpleComplexCommon)
+target_link_libraries(SimpleComplexClient PRIVATE SimpleComplexCommon SDL2::SDL2_gfx)
 target_link_libraries(SimpleComplexClient PRIVATE $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main> $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>)
 target_link_libraries(SimpleComplexClient PRIVATE $<IF:$<TARGET_EXISTS:SDL2_image::SDL2_image>,SDL2_image::SDL2_image,SDL2_image::SDL2_image-static>)
-target_link_libraries(SimpleComplexClient PRIVATE imgui::imgui Boost::asio Boost::thread)
+target_link_libraries(SimpleComplexClient PRIVATE imgui::imgui Boost::asio Boost::thread DeiVoluntas)
 target_link_directories(SimpleComplexClient PUBLIC src/**)
 
 source_group(
