--- a/DeiVoluntas/CMakeLists.txt
+++ b/DeiVoluntas/CMakeLists.txt
@@ -3,6 +3,7 @@ find_package(SDL2_image CONFIG REQUIRED)
 find_package(sdl2-gfx CONFIG REQUIRED)
 find_package(boost_asio CONFIG REQUIRED)
 find_package(box2d CONFIG REQUIRED)
+find_package(EnTT CONFIG REQUIRED)
 
 file(GLOB_RECURSE SOURCES "src/**/*.cpp")
 file(GLOB_RECURSE HEADER_LIST "include/**/*.h")
@@ -13,7 +14,7 @@ target_include_directories(DeiVoluntas PUBLIC include)
 
 target_link_libraries(DeiVoluntas PRIVATE $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main> $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>)
 target_link_libraries(DeiVoluntas PRIVATE $<IF:$<TARGET_EXISTS:SDL2_image::SDL2_image>,SDL2_image::SDL2_image,SDL2_image::SDL2_image-static>)
-target_link_libraries(DeiVoluntas PRIVATE Boost::asio box2d::box2d SDL2::SDL2_gfx)
+target_link_libraries(DeiVoluntas PRIVATE Boost::asio box2d::box2d SDL2::SDL2_gfx EnTT::EnTT)
 target_link_directories(DeiVoluntas PUBLIC src/**)
 
 source_group(
