--- a/SimpleComplexClient/CMakeLists.txt
+++ b/SimpleComplexClient/CMakeLists.txt
@@ -4,6 +4,7 @@ find_package(boost_asio CONFIG REQUIRED)
 find_package(box2d CONFIG REQUIRED)
 find_package(imgui CONFIG REQUIRED)
 find_package(boost_thread CONFIG REQUIRED)
+find_package(SDL2_ttf CONFIG REQUIRED)
 
 file(GLOB_RECURSE SOURCES "src/**/*.cpp")
 file(GLOB_RECURSE HEADER_LIST "include/**/*.h")
@@ -15,6 +16,7 @@ target_include_directories(SimpleComplexClient PUBLIC include)
 target_link_libraries(SimpleComplexClient PRIVATE SimpleComplexCommon imgui::imgui Boost::asio Boost::thread DeiVoluntas)
 target_link_libraries(SimpleComplexClient PRIVATE $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main> $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>)
 target_link_libraries(SimpleComplexClient PRIVATE $<IF:$<TARGET_EXISTS:SDL2_image::SDL2_image>,SDL2_image::SDL2_image,SDL2_image::SDL2_image-static>)
+target_link_libraries(SimpleComplexClient PRIVATE $<IF:$<TARGET_EXISTS:SDL2_ttf::SDL2_ttf>,SDL2_ttf::SDL2_ttf,SDL2_ttf::SDL2_ttf-static>)
 target_link_directories(SimpleComplexClient PUBLIC src/**)
 
 source_group(
