--- a/SimpleComplexClient/CMakeLists.txt
+++ b/SimpleComplexClient/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(box2d CONFIG REQUIRED)
 find_package(imgui CONFIG REQUIRED)
 find_package(boost_thread CONFIG REQUIRED)
 find_package(SDL2_ttf CONFIG REQUIRED)
+find_package(platform_folders CONFIG REQUIRED)
 
 file(GLOB_RECURSE SOURCES "src/**/*.cpp")
 file(GLOB_RECURSE HEADER_LIST "include/**/*.h")
@@ -13,7 +14,7 @@ add_executable(SimpleComplexClient src/main.cpp ${SOURCES} ${HEADER_LIST})
 
 target_include_directories(SimpleComplexClient PUBLIC include)
 
-target_link_libraries(SimpleComplexClient PRIVATE SimpleComplexCommon imgui::imgui Boost::asio Boost::thread DeiVoluntas)
+target_link_libraries(SimpleComplexClient PRIVATE SimpleComplexCommon sago::platform_folders imgui::imgui Boost::asio Boost::thread DeiVoluntas)
 target_link_libraries(SimpleComplexClient PRIVATE $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main> $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>)
 target_link_libraries(SimpleComplexClient PRIVATE $<IF:$<TARGET_EXISTS:SDL2_image::SDL2_image>,SDL2_image::SDL2_image,SDL2_image::SDL2_image-static>)
 target_link_libraries(SimpleComplexClient PRIVATE $<IF:$<TARGET_EXISTS:SDL2_ttf::SDL2_ttf>,SDL2_ttf::SDL2_ttf,SDL2_ttf::SDL2_ttf-static>)
