--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -103,9 +103,9 @@ jobs:
       # run: cmake --build --preset ninja-vcpkg --config Release
       - name: Build (Release configuration)
         run: |
-          cmake --build --preset vcpkg-release
+          cmake --build --preset VX
 
       # Test the whole project with CTest, again Release configuration only.
-      - name: Test (Release configuration)
-        run: |
-          ctest --preset test-release
+      #- name: Test (Release configuration)
+        #run: |
+          #ctest --preset test-release
